# SPDX-License-Identifier: GPL-2.0-or-later

load(
    "//build/kernel/kleaf:kernel.bzl",
    "checkpatch",
    "kernel_module",
)
load("//private/devices/google/common/kleaf:device_build.bzl", "device_build")

package(
    default_visibility = [
        "//private/devices/google:__subpackages__",
        "//private/google-modules:__subpackages__",
    ],
)

checkpatch(
    name = "checkpatch",
    checkpatch_pl = "//common:scripts/checkpatch.pl",
)

# This builds the kernel modules in private/google-modules/soc/gs.
kernel_module(
    name = "gs_soc",
    srcs = [
        "//private/google-modules/perf:headers",
        "//private/google-modules/soc/gs:gs_soc_sources",
        "//private/google-modules/trusty:headers",
    ],
    outs = [
        # keep sorted
        "drivers/dma-buf/heaps/samsung/samsung_dma_heap.ko",
        "drivers/input/keycombo.ko",
        "drivers/input/keydebug.ko",
        "drivers/iommu/samsung-secure-iova.ko",
        "drivers/mfd/slg51002-core.ko",
        "drivers/misc/sbb-mux/sbb-mux.ko",
        "drivers/misc/sscoredump/sscoredump.ko",
        "drivers/pinctrl/pinctrl-slg51002.ko",
        "drivers/power/reset/debug-reboot.ko",
        "drivers/regulator/rt6160-regulator.ko",
        "drivers/regulator/s2dos07x02-regulator.ko",
        "drivers/regulator/slg51002-regulator.ko",
        "drivers/regulator/tps628600-regulator.ko",
        "drivers/soc/google/debug/bookerci.ko",
        "drivers/soc/google/debug/pixel-boot-metrics.ko",
        "drivers/soc/google/debug/pixel-debug-test.ko",
        "drivers/soc/google/gcma/gcma.ko",
        "drivers/soc/google/gnssif_spi/gnss_spi.ko",
        "drivers/soc/google/gnssif_spi/gnssif.ko",
        "drivers/soc/google/hardlockup-watchdog.ko",
        "drivers/soc/google/kernel-top.ko",
        "drivers/soc/google/modemctl/google_modemctl.ko",
        "drivers/soc/google/pa_kill/pa_kill.ko",
        "drivers/soc/google/perf_trace_counters.ko",
        "drivers/soc/google/pixel_stat/mm/pixel_stat_mm.ko",
        "drivers/soc/google/pixel_stat/pixel_stat_sysfs.ko",
        "drivers/soc/google/pt/slc_dummy.ko",
        "drivers/soc/google/pt/slc_pt.ko",
        "drivers/soc/google/smra/smra.ko",
        "drivers/soc/google/vh/kernel/cgroup/vh_cgroup.ko",
        "drivers/soc/google/vh/kernel/fs/vh_fs.ko",
        "drivers/soc/google/vh/kernel/metrics/pixel_metrics.ko",
        "drivers/soc/google/vh/kernel/mm/vh_mm.ko",
        "drivers/soc/google/vh/kernel/pixel_em/pixel_em.ko",
        "drivers/soc/google/vh/kernel/sched/sched_tp.ko",
        "drivers/soc/google/vh/kernel/sched/vh_preemptirq_long.ko",
        "drivers/soc/google/vh/kernel/sched/vh_sched.ko",
        "drivers/soc/google/vh/kernel/systrace.ko",
        "drivers/soc/google/vh/kernel/thermal/vh_thermal.ko",
        "drivers/spmi/spmi_bit_bang.ko",
        "drivers/usb/dwc3/google-role-sw.ko",
        "drivers/usb/gadget/function/usb_f_dm.ko",
        "drivers/usb/gadget/function/usb_f_dm1.ko",
        "drivers/usb/host/xhci-goog-dma.ko",
        "drivers/usb/typec/tcpm/google/bc_max77759.ko",
        "drivers/usb/typec/tcpm/google/google_tcpci_shim.ko",
        "drivers/usb/typec/tcpm/google/max77759_contaminant.ko",
        "drivers/usb/typec/tcpm/google/max77759_helper.ko",
        "drivers/usb/typec/tcpm/google/max77779_contaminant.ko",
        "drivers/usb/typec/tcpm/google/max777x9_contaminant.ko",
        "drivers/usb/typec/tcpm/google/tcpci_max77759.ko",
        "drivers/usb/typec/tcpm/google/tcpci_max777x9_spmi.ko",
        "drivers/usb/typec/tcpm/google/usb_psy.ko",
        "drivers/usb/typec/tcpm/google/usbc_cooling_dev.ko",
    ],
    kernel_build = "//private/devices/google/common:kernel",
    makefile = ["//private/google-modules/soc/gs:Makefile"],
    visibility = [
        # keep sorted
        "//private/devices/google:__subpackages__",
        "//private/google-modules:__subpackages__",
    ],
    deps = [
        "//private/google-modules/bms/misc:bms-misc",
        "//private/google-modules/perf:gs_perf_headers",
        "//private/google-modules/perf/core/gs_domain_idle",
        "//private/google-modules/perf/core/gs_perf_mon",
        "//private/google-modules/trusty",
    ],
)

# This builds the kernel modules in private/google-modules/soc/rdo.
kernel_module(
    name = "lga_soc",
    srcs = [
        "//private/google-modules/bms/misc:headers",
        "//private/google-modules/perf:headers",
        "//private/google-modules/soc/gs:gs_soc_headers",
        "//private/google-modules/soc/rdo:rdo_soc_sources",
    ],
    outs = [
        # keep sorted
        "ap-pmic/da9188-core.ko",
        "ap-pmic/gpio/da9188-gpio.ko",
        "ap-pmic/regulator/da9188-regulator.ko",
        "ap-pmic/rtc/da9188-rtc.ko",
        "ap-pmic/vgpio/da9188-vgpio.ko",
        "cap-sysfs/google_cap_sysfs.ko",
        "clocksource/google/sst/google_sst.ko",
        "cpm-tracepoint/google-cpm-tracepoint.ko",
        "cpmlog/google_cpmlog.ko",
        "cpu-lpm-stats/google_cpu_lpm_stats.ko",
        "cpufreq/google_cpufreq.ko",
        "cstate-ctrl/cstate_ctrl.ko",
        "devfreq/dsufreq/google_dsufreq.ko",
        "drivers/clk/google/clk-cpm.ko",
        "drivers/devfreq/google_ccf_devfreq.ko",
        "drivers/devfreq/google_devfreq.ko",
        "drivers/dma/google-gpdma.ko",
        "drivers/dma/pl330.ko",
        "drivers/i2c/busses/i2c-designware-core.ko",
        "drivers/i2c/busses/i2c-designware-platform.ko",
        "drivers/i3c/master/dw-i3c-master.ko",
        "drivers/irqchip/irq-extended-sysfs.ko",
        "drivers/irqchip/irq-gia-google.ko",
        "drivers/irqchip/irq-gia-google-test.ko",
        "drivers/irqchip/irq-gia-lib.ko",
        "drivers/irqchip/irq-google-cpm.ko",
        "drivers/mailbox/goog-mba-ctrl.ko",
        "drivers/perf/google_gem.ko",
        "drivers/perf/google_gem_test.ko",
        "drivers/pinctrl/google/pinctrl.ko",
        "drivers/rst/google/rst-cpm.ko",
        "drivers/soc/google/cdd-cpu/goog-cpu-idle-info.ko",
        "drivers/soc/google/cdd/gcdd.ko",
        "drivers/soc/google/debug/google-ehld-coreinstr.ko",
        "drivers/soc/google/debug/google-pmu-ehld.ko",
        "drivers/soc/google/dvfs-helper/dvfs_helper.ko",
        "drivers/soc/google/goog-chip-info.ko",
        "drivers/soc/google/goog-mba-aggr.ko",
        "drivers/soc/google/goog-mba-cpm-iface.ko",
        "drivers/soc/google/goog-mba-cpm-iface-test.ko",
        "drivers/soc/google/goog-mba-gdmc-iface.ko",
        "drivers/soc/google/goog-mba-gdmc-iface-test.ko",
        "drivers/soc/google/google_gdmc_dhub.ko",
        "drivers/soc/google/google_gtc.ko",
        "drivers/soc/google/google_timestamp_sync.ko",
        "drivers/soc/google/gs-debug-test.ko",
        "drivers/soc/google/lpm-pm-domains/lpm_pm_domains.ko",
        "drivers/soc/google/pixel-debug-kinfo.ko",
        "drivers/soc/google/ra/google-ra.ko",
        "drivers/soc/google/vdu/gvdu.ko",
        "drivers/spi/spi-dw-mmio.ko",
        "drivers/spmi/regmap-goog-spmi.ko",
        "drivers/spmi/spmi-smartdv.ko",
        "drivers/tty/serial/8250/google_8250.ko",
        "drivers/tty/serial/8250/google_8250_base.ko",
        "drivers/tty/serial/8250/google_8250_dw.ko",
        "drivers/ufs/ufs.ko",
        "ebu/ebu-google.ko",
        "experimental/manual_lpcm/manual_lpcm.ko",
        "gadget/dta/google_dta.ko",
        "hardlockup-debug/hardlockup-debug.ko",
        "interconnect/google-icc-helper-mock-client.ko",
        "interconnect/google-irm-stub.ko",
        "interconnect/google_icc.ko",
        "interconnect/google_irm.ko",
        "ip-idle-notifier/google_ip_idle_notifier.ko",
        "lpcm/gpu/gpu_pf_state.ko",
        "lpcm/pf_state_cpm/pf_state_cpm.ko",
        "odpm/google_odpm.ko",
        "phy/google-eusb2-repeater.ko",
        "phy/google-usb-phy.ko",
        "power-controller/power_controller.ko",
        "powerdashboard/google_powerdashboard.ko",
        "soc/google/gslc/gslc.ko",
        "trace/generic_source.ko",
        "usb/dwc3-google.ko",
        "watchdog/google_wdt.ko",
    ],
    kernel_build = "//private/devices/google/common:kernel",
    makefile = ["//private/google-modules/soc/rdo:Makefile"],
    visibility = [
        # keep sorted
        "//private/devices/google:__subpackages__",
        "//private/google-modules:__subpackages__",
    ],
    deps = [
        "//private/google-modules/bms/misc:bms-misc",
        "//private/google-modules/perf:google_pm_qos",
        "//private/google-modules/perf:google_vote_manager",
        "//private/google-modules/perf/core/gs_domain_idle",
        "//private/google-modules/soc/gs:gs_soc_module",
        "//private/google-modules/soc/gs/drivers/soc/google/gsa",
    ],
)

device_build(
    name = "lga_base",
    build_configs = ["build.config.lga"],
    ddk_uapi_headers = [
        "//private/google-modules/aoc/alsa:uapi_headers",
        "//private/google-modules/display/common:uapi_headers",
        "//private/google-modules/display/vsi-drm:uapi_headers",
        "//private/google-modules/soc/gs:misc_uapi_headers",
        "//private/google-modules/video/cnm:uapi_headers",
    ],
    defconfig_fragments = ["lga_defconfig"],
    ext_modules = [
        # keep sorted
        ":gs_soc",
        ":lga_soc",
        "//private/google-modules/amplifiers/audiometrics",
        "//private/google-modules/aoc",
        "//private/google-modules/aoc/alsa",
        "//private/google-modules/aoc/usb:aoc.usb",
        "//private/google-modules/bms",
        "//private/google-modules/bms:max77779-charger-spmi",
        "//private/google-modules/bms:max77779-fg-spmi",
        "//private/google-modules/bms:max77779-sp-spmi",
        "//private/google-modules/bms:max77779-vimon-spmi",
        "//private/google-modules/bms:max77779_i2cm_spmi",
        "//private/google-modules/bms:max77779_pmic_spmi",
        "//private/google-modules/bms/misc:bms-misc",
        "//private/google-modules/display/common/gs_drm",
        "//private/google-modules/display/common/gs_panel",
        "//private/google-modules/display/common/panel_tests",
        "//private/google-modules/display/common/panels:panel-gs-s6e3hc4",
        "//private/google-modules/display/common/panels:panel-gs-simple",
        "//private/google-modules/display/vsi-drm",
        "//private/google-modules/display/vsi-g2d:drm-g2d",
        "//private/google-modules/edgetpu/buenos/drivers/edgetpu:edgetpu.buenos",
        "//private/google-modules/gxp/lga:gxp",
        "//private/google-modules/iif",
        "//private/google-modules/iommu/arm-smmu-v3",
        "//private/google-modules/lwis:lwis.dublin",
        "//private/google-modules/misc/sscoredump",
        "//private/google-modules/perf:google_pm_qos",
        "//private/google-modules/perf:google_vote_manager",
        "//private/google-modules/perf/core/gs_domain_idle",
        "//private/google-modules/perf/core/gs_perf_mon",
        "//private/google-modules/perf/core/irm_devfreq:google_irm_devfreq",
        "//private/google-modules/perf/core/lat_govs:gs_governor_dsulat",
        "//private/google-modules/perf/core/lat_govs:gs_governor_memlat",
        "//private/google-modules/perf/core/lat_govs:gs_governor_utils",
        "//private/google-modules/perf/infra/mbfs",
        "//private/google-modules/perf/infra/mbfs:mbfs_cpm_backend",
        "//private/google-modules/perf/thermal",
        "//private/google-modules/power/mitigation:bcl",
        "//private/google-modules/power/reset",
        "//private/google-modules/powervr",
        "//private/google-modules/radio/common/metrics_collection",
        "//private/google-modules/soc/gs/drivers/block/zram:zcomp_cpu",
        "//private/google-modules/soc/gs/drivers/block/zram:zcomp_eh",
        "//private/google-modules/soc/gs/drivers/block/zram:zram_gs",
        "//private/google-modules/soc/gs/drivers/misc/s5910",
        "//private/google-modules/soc/gs/drivers/soc/google/eh",
        "//private/google-modules/soc/gs/drivers/soc/google/gsa",
        "//private/google-modules/soc/rdo/drivers/soc/google/fwtp:fwtp_module_group",
        "//private/google-modules/soc/rdo/mem-qos:google-mem-qos",
        "//private/google-modules/soc/rdo/mem-qos:google-mem-qos-mock-client",
        "//private/google-modules/soc/rdo/pci:google-pcie-v1",
        "//private/google-modules/touch/common:touch.common",
        "//private/google-modules/trusty",
        "//private/google-modules/video/cnm",
    ],
    kconfig_exts = ["Kconfig.ext.lga"],
    kconfigs = [
        # keep sorted
        "//private/google-modules/aoc:aoc.kconfig",
        "//private/google-modules/aoc/alsa:alsa.kconfig",
        "//private/google-modules/aoc/usb:aoc.usb.kconfig",
        "//private/google-modules/bms/misc:bms-misc.kconfig",
        "//private/google-modules/display/common:common.kconfig",
        "//private/google-modules/display/vsi-drm:vsi-drm.kconfig",
        "//private/google-modules/display/vsi-g2d:drm-g2d.kconfig",
        "//private/google-modules/iommu/arm-smmu-v3:arm-smmu-v3.kconfig",
        "//private/google-modules/lwis:lwis.kconfig",
        "//private/google-modules/perf:perf.kconfig",
        "//private/google-modules/power/mitigation:bcl.kconfig",
        "//private/google-modules/power/reset:reset.kconfig",
        "//private/google-modules/powervr:powervr.kconfig",
        "//private/google-modules/radio/common/metrics_collection:metrics_collection.kconfig",
        "//private/google-modules/soc/gs:gs_soc.kconfig",
        "//private/google-modules/soc/gs/drivers/misc/s5910:s5910.kconfig",
        "//private/google-modules/soc/gs/drivers/soc/google/gsa:gsa.kconfig",
        "//private/google-modules/soc/rdo:rdo_soc.kconfig",
        "//private/google-modules/soc/rdo/drivers/soc/google/fwtp:fwtp.kconfig",
        "//private/google-modules/touch/common:touch.common.kconfig",
        "//private/google-modules/trusty:trusty.kconfig",
        "//private/google-modules/video/cnm:cnm.kconfig",
    ],
    kunit_modules = [
        # keep sorted
        "//private/google-modules/perf/thermal:devfreq_tj_cdev_test",
        "//private/google-modules/perf/thermal:thermal_helper_test",
        "//private/google-modules/perf/thermal:thermal_mbox_test",
        "//private/google-modules/perf/thermal:thermal_sensor_stats_test",
        "//private/google-modules/soc/gs/drivers/soc/google/gsa:gsa_core_kunit_test",
    ],
    system_dlkm_modules_blocklists = ["system_dlkm.blocklist.lga"],
    vendor_dlkm_modules_blocklists = ["vendor_dlkm.blocklist.lga"],
    vendor_ramdisk_modules_lists = ["vendor_ramdisk.modules.lga"],
)
