# SPDX-License-Identifier: GPL-2.0-or-later

load("//build/kernel/kleaf:kernel.bzl", "checkpatch")
load("//private/devices/google/common/kleaf:device_build.bzl", "device_build")
load("//private/devices/google/gs101:constants.bzl", "GS101_DTBS", "GS101_MODULE_OUTS")
load(":constants.bzl", "RAVIOLE_DTBOS")

package(
    default_visibility = [
        "//private/devices/google/gs101:__subpackages__",
    ],
)

checkpatch(
    name = "checkpatch",
    checkpatch_pl = "//common:scripts/checkpatch.pl",
)

device_build(
    name = "raviole",
    base_device = "//private/devices/google/gs101:gs101_base",
    build_dtb = True,
    build_dtbo = True,
    build_vendor_dlkm = True,
    defconfig_fragments = ["raviole_defconfig"],
    dtb_outs = GS101_DTBS,
    dtbo_outs = RAVIOLE_DTBOS,
    dts_makefile = "dts/Makefile",
    dts_srcs = glob(["dts/**"]) + [
        "//private/google-modules/soc/gs:gs.dt-bindings",
    ],
    ext_modules = [
        # keep sorted
        "//private/google-modules/amplifiers/cs35l41",
        "//private/google-modules/amplifiers/cs40l25",
        "//private/google-modules/amplifiers/drv2624",
        "//private/google-modules/amplifiers/snd_soc_wm_adsp:snd-soc-wm-adsp",
        "//private/google-modules/bluetooth/broadcom:bluetooth.broadcom",
        "//private/google-modules/gps/broadcom/bcm47765",
        "//private/google-modules/nfc",
        "//private/google-modules/radio/samsung/s5300:cpif.dit",
        "//private/google-modules/touch/common:touch.common",
        "//private/google-modules/touch/fts/ftm5_legacy:ftm5",
        "//private/google-modules/touch/sec",
        "//private/google-modules/uwb/qorvo/dw3000/kernel:uwb.dw3000",
        "//private/google-modules/wlan/bcmdhd/bcm4389:bcmdhd4389",
    ],
    insmod_cfgs = glob(["insmod_cfg/*.cfg"]),
    kconfig_exts = ["Kconfig.ext.raviole"],
    kconfigs = [
        # keep sorted
        "//private/google-modules/radio/samsung/s5300:cpif.kconfig",
        "//private/google-modules/touch/common:touch.common.kconfig",
        "//private/google-modules/touch/fts/ftm5_legacy:ftm5.kconfig",
        "//private/google-modules/touch/sec:sec.kconfig",
    ],
    module_outs = GS101_MODULE_OUTS,
    vendor_dlkm_modules_blocklists = ["vendor_dlkm.blocklist.raviole"],
    vendor_ramdisk_modules_lists = ["vendor_ramdisk.modules.raviole"],
)

# For compatibility
alias(
    name = "gs101_raviole_dist",
    actual = ":raviole/dist",
)

alias(
    name = "gs101_raviole_abi_update_symbol_list",
    actual = ":raviole/kernel_abi_update_symbol_list",
)

alias(
    name = "kernel",
    actual = ":raviole/kernel",
)

alias(
    name = "kernel_abi_update_symbol_list",
    actual = ":raviole/kernel_abi_update_symbol_list",
)

alias(
    name = "kernel_compile_commands",
    actual = ":raviole/kernel_compile_commands",
)
