# SPDX-License-Identifier: GPL-2.0-only

load("//build/kernel/kleaf:kernel.bzl", "checkpatch")
load("//private/devices/google/common/kleaf:device_build.bzl", "device_build")
load("//private/devices/google/gs201:constants.bzl", "GS201_DTBS", "GS201_MODULE_OUTS")
load(":constants.bzl", "TANGORPRO_DTBOS", "TANGORPRO_MODULE_OUTS")

package(
    default_visibility = [
        "//private/devices/google/gs201:__subpackages__",
    ],
)

checkpatch(
    name = "checkpatch",
    checkpatch_pl = "//common:scripts/checkpatch.pl",
)

device_build(
    name = "tangorpro",
    base_device = "//private/devices/google/gs201:gs201_base",
    build_dtb = True,
    build_dtbo = True,
    build_system_dlkm = True,
    build_vendor_dlkm = True,
    build_vendor_kernel_boot = True,
    defconfig_fragments = ["tangorpro_defconfig"],
    dtb_outs = GS201_DTBS,
    dtbo_outs = TANGORPRO_DTBOS,
    dts_makefile = "dts/Makefile",
    dts_srcs = glob(["dts/**"]) + [
        "//private/google-modules/soc/gs:gs.dt-bindings",
    ],
    ext_modules = [
        # keep sorted
        "//private/devices/google/tangorpro/display:drm_panel.google",
        "//private/devices/google/tangorpro/pogo:pogo_transport",
        "//private/google-modules/amplifiers/cs35l41",
        "//private/google-modules/amplifiers/snd_soc_wm_adsp:snd-soc-wm-adsp",
        "//private/google-modules/bluetooth/broadcom:bluetooth.broadcom",
        "//private/google-modules/fingerprint/fpc",
        "//private/google-modules/gps/broadcom/bcm47765",
        "//private/google-modules/touch/common:touch.common",
        "//private/google-modules/touch/common/usi:touch.common.usi",
        "//private/google-modules/touch/novatek/nt36xxx",
        "//private/google-modules/uwb/qorvo/dw3000/kernel:uwb.dw3000",
        "//private/google-modules/wlan/syna/dhd43752p:synadhd",
    ],
    insmod_cfgs = glob(["insmod_cfg/*.cfg"]),
    kconfig_exts = ["Kconfig.ext.tangorpro"],
    kconfigs = [
        # keep sorted
        "//private/google-modules/touch/common:touch.common.kconfig",
    ],
    module_outs = GS201_MODULE_OUTS + TANGORPRO_MODULE_OUTS,
    vendor_dlkm_modules_blocklists = ["vendor_dlkm.blocklist.tangorpro"],
    vendor_ramdisk_modules_lists = ["vendor_ramdisk.modules.tangorpro"],
)

# For compatibility
alias(
    name = "gs201_tangorpro_dist",
    actual = ":tangorpro/dist",
)

alias(
    name = "gs201_tangorpro_abi_update_symbol_list",
    actual = ":tangorpro/kernel_abi_update_symbol_list",
)

alias(
    name = "kernel",
    actual = ":tangorpro/kernel",
)

alias(
    name = "kernel_abi_update_symbol_list",
    actual = ":tangorpro/kernel_abi_update_symbol_list",
)

alias(
    name = "kernel_compile_commands",
    actual = ":tangorpro/kernel_compile_commands",
)
